--- a/DataInterfaceCellexalVR.csproj
+++ b/DataInterfaceCellexalVR.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.14" />
+    <PackageReference Include="NJsonSchema" Version="10.7.2" />
+  </ItemGroup>
+
 </Project>
